Add terraform eks

--- a/4-iac-k8s/eksctl.yaml
+++ b/4-iac-k8s/eksctl.yaml
@@ -22,7 +22,7 @@ managedNodeGroups:
     spot: true
     tags:
       service: demo
-      isStaging: staging
+      isStaging: true
     minSize: 1
     maxSize: 10
     desiredCapacity: 0
