--- a/3-argo-rollouts/helm/templates/service.yaml
+++ b/3-argo-rollouts/helm/templates/service.yaml
@@ -1,3 +1,4 @@
+---
 apiVersion: v1
 kind: Service
 metadata:
@@ -16,3 +17,24 @@ spec:
     targetPort: {{ .Values.app.port }}
   selector:
     app: {{ .Release.Name }}
+---
+{{- if and .Values.app.strategy .Values.app.strategy.blueGreen }}
+apiVersion: v1
+kind: Service
+metadata:
+  name: {{ .Release.Name }}-preview
+  namespace: {{ .Values.app.namespace }}
+  {{- if .Values.service.annotations }}
+  annotations:
+  {{- range $key, $value := .Values.service.annotations }}
+    {{ $key }}: {{ $value | quote }}
+  {{- end }}
+  {{- end }}
+spec:
+  type: {{ .Values.app.serviceType }}
+  ports:
+  - port: {{ .Values.app.export | default 80 }}
+    targetPort: {{ .Values.app.port }}
+  selector:
+    app: {{ .Release.Name }}
+{{- end }}
