config flag hcpVault & modify secret

--- a/3-argo-rollouts/helm/templates/hcp-secret.yaml
+++ b/3-argo-rollouts/helm/templates/hcp-secret.yaml
@@ -1,6 +1,6 @@
 
 ---
-{{- if .Values.envFrom }}
+{{- if and .Values.envFrom .Values.hcpVault }}
 apiVersion: external-secrets.io/v1alpha1
 kind: ExternalSecret
 metadata:
